- Reloaded java 11 syntax after java-8 merge in this branch