@@ -12,7 +12,6 @@ import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -25,7 +24,7 @@ public class PrefixSequenceMapFilterToListBenchmark {
 
     private final List<String> list = IntStream.range(0, 100_000)
             .mapToObj(String::valueOf)
-            .collect(Collectors.toList());
+            .collect(Collectors.toUnmodifiableList());
 
     public PrefixSequenceMapFilterToListBenchmark() {
         super();
@@ -44,7 +43,7 @@ public class PrefixSequenceMapFilterToListBenchmark {
         return list.stream()
                 .map(String::length)
                 .filter(IntX::isEven)
-                .collect(Collectors.toList());
+                .collect(Collectors.toUnmodifiableList());
     }
 
     @Benchmark
@@ -52,7 +51,7 @@ public class PrefixSequenceMapFilterToListBenchmark {
         return list.parallelStream()
                 .map(String::length)
                 .filter(IntX::isEven)
-                .collect(Collectors.toList());
+                .collect(Collectors.toUnmodifiableList());
     }
 
     @Benchmark
@@ -64,7 +63,7 @@ public class PrefixSequenceMapFilterToListBenchmark {
                 result.add(length);
             }
         }
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     public static void main(String[] args) {
