@@ -33,9 +33,9 @@ public interface DoubleCollector<A, R> {
                                           @NotNull ObjDoubleConsumer<A> accumulator,
                                           @NotNull BinaryOperator<A> combiner,
                                           @NotNull Collector.Characteristics... characteristics) {
-        final Collector.Characteristics identityFinish = Collector.Characteristics.IDENTITY_FINISH;
+        final var identityFinish = Collector.Characteristics.IDENTITY_FINISH;
         Set<Collector.Characteristics> cs = (characteristics.length == 0)
-                ? Collections.singleton(identityFinish)
+                ? Set.of(identityFinish)
                 : Collections.unmodifiableSet(EnumSet.of(identityFinish, characteristics));
         return new DoubleCollectorImpl<>(supplier, accumulator, combiner, cs);
     }
