@@ -10,7 +10,6 @@ import org.hzt.utils.sequences.Sequence;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.function.BiConsumer;
@@ -70,7 +69,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
         C destination = collectionFactory.get();
         final Iterable<K> keyIterable = this::keyIterator;
         for (K e : keyIterable) {
-            Iterable<? extends R> iterable = mapper.apply(e);
+            var iterable = mapper.apply(e);
             if (iterable instanceof Collection<?>) {
                 //noinspection unchecked
                 destination.addAll((Collection<R>) iterable);
@@ -90,7 +89,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
         C destination = collectionFactory.get();
         final Iterable<V> valueIterable = this::valueIterator;
         for (V e : valueIterable) {
-            Iterable<? extends R> iterable = mapper.apply(e);
+            var iterable = mapper.apply(e);
             if (iterable instanceof Collection<?>) {
                 //noinspection unchecked
                 destination.addAll((Collection<R>) iterable);
@@ -108,7 +107,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
     @NotNull
     default Iterator<V> valueIterator() {
         Iterator<Map.Entry<K, V>> iterator = iterator();
-        return new Iterator<V>() {
+        return new Iterator<>() {
             @Override
             public boolean hasNext() {
                 return iterator.hasNext();
@@ -124,7 +123,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
     @NotNull
     default Iterator<K> keyIterator() {
         Iterator<Map.Entry<K, V>> iterator = iterator();
-        return new Iterator<K>() {
+        return new Iterator<>() {
             @Override
             public boolean hasNext() {
                 return iterator.hasNext();
@@ -150,7 +149,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
     }
 
     default Map<K, V> toMap() {
-        return Collections.unmodifiableMap(MutableMapX.of(this));
+        return Map.copyOf(MutableMapX.of(this));
     }
 
     default <R extends Comparable<? super R>> SortedMutableMapX<K, V> toSortedMap(
@@ -167,7 +166,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
     }
 
     default boolean any(BiPredicate<K, V> biPredicate) {
-        for (Map.Entry<K, V> e : this) {
+        for (var e : this) {
             if (biPredicate.test(e.getKey(), e.getValue())) {
                 return true;
             }
@@ -176,7 +175,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
     }
 
     default boolean all(BiPredicate<K, V> biPredicate) {
-        for (Map.Entry<K, V> e : this) {
+        for (var e : this) {
             if (!biPredicate.test(e.getKey(), e.getValue())) {
                 return false;
             }
@@ -185,7 +184,7 @@ public interface EntryIterable<K, V> extends Iterable<Map.Entry<K, V>> {
     }
 
     default boolean none(BiPredicate<K, V> biPredicate) {
-        for (Map.Entry<K, V> e : this) {
+        for (var e : this) {
             if (biPredicate.test(e.getKey(), e.getValue())) {
                 return false;
             }
