@@ -14,13 +14,11 @@ import org.junit.jupiter.api.function.Executable;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.Year;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
-import java.util.NoSuchElementException;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.LinkedTransferQueue;
 import java.util.stream.Collectors;
 
@@ -32,7 +30,7 @@ class ListXTest {
 
     @Test
     void testGetElement() {
-        final ListX<String> words = ListX.of("hallo", "asffasf", "string", "test");
+        final var words = ListX.of("hallo", "asffasf", "string", "test");
 
         assertAll(
                 () -> assertEquals("test", words.get(3)),
@@ -50,7 +48,7 @@ class ListXTest {
 
         expected.add(LocalDate.MIN);
 
-        final MutableListX<LocalDate> dates = museums.mapTo(MutableListX::empty, PaintingAuction::getDateOfOpening);
+        final var dates = museums.mapTo(MutableListX::empty, PaintingAuction::getDateOfOpening);
 
         dates.add(LocalDate.MIN);
 
@@ -61,13 +59,17 @@ class ListXTest {
     void testTakeWhile() {
         final List<Museum> museumList = TestSampleGenerator.getMuseumListContainingNulls();
 
+        final List<Museum> expected = museumList.stream()
+                .takeWhile(museum -> museum.getPaintings().size() < 3)
+                .collect(Collectors.toList());
+
         final MutableListX<Museum> actual = Sequence.of(museumList)
                 .takeWhile(museum -> museum.getPaintings().size() < 3)
                 .toMutableList();
 
         It.println("actual = " + actual);
 
-        assertTrue(actual.isNotEmpty());
+        assertEquals(expected, actual);
     }
 
     @Test
@@ -128,8 +130,8 @@ class ListXTest {
 
     @Test
     void testBinarySearchInListWithNonComparableObjectsThrowsIllegalStateException() {
-        final ListX<Locale> list = ListX.of(Locale.US, Locale.FRANCE, Locale.CANADA, Locale.GERMANY);
-        final IllegalStateException exception = assertThrows(IllegalStateException.class, () -> list.binarySearchFor(Locale.US));
+        final var list = ListX.of(Locale.US, Locale.FRANCE, Locale.CANADA, Locale.GERMANY);
+        final var exception = assertThrows(IllegalStateException.class, () -> list.binarySearchFor(Locale.US));
         assertEquals("Can not perform binary search by non comparable search value type: Locale", exception.getMessage());
     }
 
@@ -185,25 +187,25 @@ class ListXTest {
     void testSkipLast() {
         ListX<Integer> list = ListX.of(1, 2, 3, 4, 5, 6, 5);
 
-        final ListX<Integer> integers = list.skipLast(2);
+        final var integers = list.skipLast(2);
 
         assertEquals(ListX.of(1, 2, 3, 4, 5), integers);
     }
 
     @Test
     void testSkipLastTo() {
-        final ListX<Integer> list = ListX.of(1, 2, 2, 3, 4, 5, 6, 5);
+        final var list = ListX.of(1, 2, 2, 3, 4, 5, 6, 5);
 
-        final HashSet<Integer> integers = list.skipLastTo(HashSet::new, 2);
+        final var integers = list.skipLastTo(HashSet::new, 2);
 
-        assertEquals(new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)), integers);
+        assertEquals(Set.of(1, 2, 3, 4, 5), integers);
     }
 
     @Test
     void testTakeLast() {
         ListX<Integer> list = ListX.of(1, 2, 3, 4, 5, 6, 5);
 
-        final ListX<Integer> integers = list.takeLast(2);
+        final var integers = list.takeLast(2);
 
         assertEquals(ListX.of(6, 5), integers);
     }
@@ -212,9 +214,9 @@ class ListXTest {
     void testTakeLastTo() {
         ListX<Integer> list = ListX.of(1, 2, 3, 4, 5, 6, 5);
 
-        final Collection<Integer> integers = list.takeLastTo(size -> new LinkedTransferQueue<>(), 5);
+        final var integers = list.takeLastTo(size -> new LinkedTransferQueue<>(), 5);
 
-        assertIterableEquals(new LinkedTransferQueue<>(Arrays.asList(3, 4, 5, 6, 5)), integers);
+        assertIterableEquals(new LinkedTransferQueue<>(List.of(3, 4, 5, 6, 5)), integers);
     }
 
     @Test
@@ -249,7 +251,7 @@ class ListXTest {
                 .when(list -> list.size() > 3, It::println)
                 .takeIf(ListX::isNotEmpty)
                 .map(Collectable::toMutableList)
-                .orElseThrow(NoSuchElementException::new);
+                .orElseThrow();
 
         It.println("dates = " + dates);
 
@@ -258,9 +260,9 @@ class ListXTest {
 
     @Test
     void testShuffledInts() {
-        final ListX<Integer> integers = ListX.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        final var integers = ListX.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
-        final ListX<Integer> shuffled = integers.shuffled();
+        final var shuffled = integers.shuffled();
 
         It.println("shuffled = " + shuffled);
 
@@ -273,9 +275,9 @@ class ListXTest {
 
     @Test
     void testShuffledObjects() {
-        final ListX<String> input = ListX.of(TestSampleGenerator.createPaintingList()).map(Painting::name);
+        final var input = ListX.of(TestSampleGenerator.createPaintingList()).map(Painting::name);
 
-        final ListX<String> shuffled = input.shuffled();
+        final var shuffled = input.shuffled();
 
         It.println("shuffled = " + shuffled);
 
@@ -288,11 +290,11 @@ class ListXTest {
 
     @Test
     void testListXCanNotBeCastToMutableListXToModifyItsInternalContent() {
-        final ListX<Integer> integers = ListX.of(1, 2, 3, 4, 5, 6);
-        final int initSize = integers.size();
+        final var integers = ListX.of(1, 2, 3, 4, 5, 6);
+        final var initSize = integers.size();
 
         final Executable executable = () -> {
-            final MutableListX<Integer> mutableList = (MutableListX<Integer>) integers;
+            final var mutableList = (MutableListX<Integer>) integers;
             System.out.println("mutableList = " + mutableList);
         };
 
