@@ -8,8 +8,6 @@ import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -27,14 +25,13 @@ class AtomicIteratorTest {
         List<String> list1 = new ArrayList<>();
         List<String> list2 = new ArrayList<>();
 
-        final int upperBound = 100;
+        final var upperBound = 100;
 
         AtomicIterator<String> stringIterator = getBoundedStringIteratorX(upperBound);
         //noinspection StatementWithEmptyBody
-        while (stringIterator.tryAdvance(list1::add)) {
-        }
+        while (stringIterator.tryAdvance(list1::add)) ;
 
-        final AtomicIterator<String> boundedIteratorX = getBoundedStringIteratorX(upperBound);
+        final var boundedIteratorX = getBoundedStringIteratorX(upperBound);
         final Iterable<String> stringIterable = boundedIteratorX::asIterator;
         stringIterable.forEach(list2::add);
 
@@ -46,7 +43,7 @@ class AtomicIteratorTest {
         List<String> list1 = new ArrayList<>();
         List<String> list2 = new ArrayList<>();
 
-        final int upperBound = 200;
+        final var upperBound = 200;
         AtomicIterator<String> stringIterator = getBoundedStringIteratorX(upperBound);
         stringIterator.forEachRemaining(list1::add);
         stringIterator.forEachRemaining(list2::add);
@@ -60,7 +57,7 @@ class AtomicIteratorTest {
     @Test
     @DisplayName("Test get correct iterator from iteratorX instance")
     void testGetCorrectIteratorFromIteratorXInstance() {
-        final int bound = 241;
+        final var bound = 241;
         AtomicInteger atomicInteger = new AtomicInteger();
 
         AtomicIterator<String> stringIterator = getBoundedStringIteratorX(bound);
@@ -76,13 +73,13 @@ class AtomicIteratorTest {
 
     @Test
     void testMappingIterator() {
-        final ListX<String> strings = ListX.of("This", "is", "a", "test");
+        final var strings = ListX.of("This", "is", "a", "test");
 
-        final AtomicIterator<String> stringIteratorX = strings.atomicIterator();
+        final var stringIteratorX = strings.atomicIterator();
 
         final AtomicIterator<Integer> toLengthMapperIterator = action -> {
-            final AtomicReference<String> consumer = new AtomicReference<>();
-            final boolean advance = stringIteratorX.tryAdvance(consumer::set);
+            final var consumer = new AtomicReference<String>();
+            final var advance = stringIteratorX.tryAdvance(consumer::set);
             if (advance) {
                 action.accept(consumer.get().length());
             }
@@ -90,7 +87,7 @@ class AtomicIteratorTest {
         };
         Iterable<Integer> integers = toLengthMapperIterator::asIterator;
 
-        assertIterableEquals(Arrays.asList(4, 2, 1, 4), integers);
+        assertIterableEquals(List.of(4, 2, 1, 4), integers);
     }
 
     private static class BoundedIterator<T> {
@@ -109,7 +106,7 @@ class AtomicIteratorTest {
         }
 
         private boolean supplyNext(Consumer<? super T> consumer) {
-            final boolean supplyNext = counter < upperBound;
+            final var supplyNext = counter < upperBound;
             if (supplyNext) {
                 consumer.accept(supplier.apply(counter));
             }
@@ -127,7 +124,7 @@ class AtomicIteratorTest {
                 .parse("2022-04-21")::minusDays)
                 ::supplyNext;
 
-        final int[] ints = StreamSupport.stream(dateIterator.asSpliterator(), false)
+        final var ints = StreamSupport.stream(dateIterator.asSpliterator(), false)
                 .mapToInt(LocalDate::getDayOfMonth)
                 .filter(IntX::isEven)
                 .toArray();
@@ -139,7 +136,7 @@ class AtomicIteratorTest {
     @DisplayName("Test iterator from empty iteratorX throws no such element exception")
     void testIteratorFromEmptyIteratorXThrowsNoSuchElementException() {
         AtomicIterator<String> atomicIterator = c -> false;
-        final Iterator<String> stringIterator = atomicIterator.asIterator();
+        final var stringIterator = atomicIterator.asIterator();
 
         assertAll(
                 () -> assertFalse(stringIterator.hasNext()),
@@ -151,10 +148,10 @@ class AtomicIteratorTest {
     @DisplayName("Test iterator from single element iteratorX throws no such element exception after 1")
     void testIteratorFromOneThrowsNoSuchElementExceptionAfterOne() {
         AtomicIterator<String> atomicIterator = BoundedIterator.of(1, String::valueOf)::supplyNext;
-        final Iterator<String> stringIterator = atomicIterator.asIterator();
+        final var stringIterator = atomicIterator.asIterator();
 
-        final boolean hasOne = stringIterator.hasNext();
-        final String first = stringIterator.next();
+        final var hasOne = stringIterator.hasNext();
+        final var first = stringIterator.next();
 
         assertAll(
                 () -> assertTrue(hasOne),
