@@ -4,7 +4,6 @@ import org.hzt.test.TestSampleGenerator;
 import org.hzt.test.model.Museum;
 import org.hzt.test.model.Painter;
 import org.hzt.test.model.Painting;
-import org.hzt.utils.collections.ListX;
 import org.hzt.utils.sequences.Sequence;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Assertions;
@@ -12,28 +11,24 @@ import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
-import java.util.Optional;
 import java.util.Spliterator;
 import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
 import java.util.stream.IntStream;
 
 import static java.util.stream.Collectors.groupingBy;
-import static org.hzt.utils.collectors.CollectorsX.toUnmodifiableList;
+import static java.util.stream.Collectors.toUnmodifiableList;
 import static org.junit.jupiter.api.Assertions.*;
 
 class StreamXTest {
 
     @Test
     void mapFilterReduce() {
-        List<String> strings = Arrays.asList("This", "is", "a", "StreamX", "test");
+        List<String> strings = List.of("This", "is", "a", "StreamX", "test");
 
-        final Integer lengthSum = StreamX.of(strings)
+        final var lengthSum = StreamX.of(strings)
                 .filter("This is a test"::contains)
                 .map(String::length)
                 .reduce(0, Integer::sum);
@@ -43,9 +38,9 @@ class StreamXTest {
 
     @Test
     void testStreamXIsLazyAndSequential() {
-        List<String> strings = Arrays.asList("This", "is", "a", "StreamX", "test");
+        List<String> strings = List.of("This", "is", "a", "StreamX", "test");
 
-        final StreamX<Integer> streamX = StreamX.of(strings)
+        final var streamX = StreamX.of(strings)
                 .filter(this::contained)
                 .peek(Assertions::fail)
                 .map(String::length)
@@ -56,9 +51,9 @@ class StreamXTest {
 
     @Test
     void testStreamXIsLazyAndParallel() {
-        List<String> strings = Arrays.asList("This", "is", "a", "StreamX", "test");
+        List<String> strings = List.of("This", "is", "a", "StreamX", "test");
 
-        final StreamX<Integer> streamX = StreamX.parallel(strings)
+        final var streamX = StreamX.parallel(strings)
                 .filter(this::contained)
                 .peek(Assertions::fail)
                 .map(String::length)
@@ -69,18 +64,18 @@ class StreamXTest {
 
     @Test
     void testStreamXCanBeConsumedOnlyOnce() {
-        List<String> strings = Arrays.asList("This", "is", "a", "StreamX", "test");
+        List<String> strings = List.of("This", "is", "a", "StreamX", "test");
 
-        final StreamX<String> stream = StreamX.of(strings);
+        final var stream = StreamX.of(strings);
 
-        final Optional<String> max = stream
+        final var max = stream
                 .filter("This is a test"::contains)
                 .maxBy(String::length);
 
         System.out.println("stream = " + stream);
 
         assertAll(
-                () -> assertEquals("This", max.orElseThrow(NoSuchElementException::new)),
+                () -> assertEquals("This", max.orElseThrow()),
                 () -> assertThrows(IllegalStateException.class, () -> stream.anyMatch(String::isEmpty))
         );
     }
@@ -92,7 +87,7 @@ class StreamXTest {
 
     @Test
     void streamXCanBeImplementedAsFunctionInterface() {
-        final String firstNameLastInAlphabet = new Gallery()
+        final var firstNameLastInAlphabet = new Gallery()
                 .map(Painting::painter)
                 .maxOf(Painter::getFirstName);
 
@@ -111,7 +106,7 @@ class StreamXTest {
 
     @Test
     void testHasCharacteristics() {
-        Spliterator<String> spliterator = new Spliterator<String>() {
+        Spliterator<String> spliterator = new Spliterator<>() {
             @Override
             public boolean tryAdvance(Consumer<? super String> action) {
                 return false;
@@ -139,24 +134,37 @@ class StreamXTest {
     }
 
     @Test
+    void testTakeWhile() {
+        final var integers = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
+
+        final var expected = integers.stream()
+                .takeWhile(i -> i < 7)
+                .collect(toUnmodifiableList());
+
+        final var actual = StreamX.of(integers)
+                .takeWhile(i -> i < 7)
+                .toList();
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
     void testGroupBy() {
-        final List<Integer> integers = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        final var integers = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
 
         final UnaryOperator<Integer> modulo3 = i -> i % 3;
 
-        final Map<Integer, List<Integer>> expected = integers.stream()
+        final var expected = integers.stream()
                 .collect(groupingBy(modulo3));
 
-        final Map<Integer, List<Integer>> actual = StreamX.of(integers).groupBy(modulo3);
+        final var actual = StreamX.of(integers).groupBy(modulo3);
 
         assertEquals(expected, actual);
     }
 
     @Test
     void testLoopOverAStreamX() {
-        final IntStream iterate = IntStream.iterate(0, i -> ++i);
-        final StreamX<String> strings = StreamX.of(iterate
-                        .limit(1_000_000)
+        final var strings = StreamX.of(IntStream.iterate(0, i -> i < 1_000_000, i -> ++i)
                 .boxed())
                 .map(String::valueOf);
 
@@ -171,10 +179,10 @@ class StreamXTest {
 
     @Test
     void testParallelism() {
-        final Sequence<LocalDate> generate = Sequence.generate(LocalDate.ofEpochDay(0), date -> date.plusWeeks(2))
+        final var generate = Sequence.generate(LocalDate.EPOCH, date -> date.plusWeeks(2))
                 .takeWhile(LocalDate.of(2020, Month.JANUARY, 1)::isAfter);
 
-        final ListX<Month> months = StreamX.of(generate)
+        final var months = StreamX.of(generate)
                 .filter(this::dateInLeapYear)
                 .isParallel(System.out::println)
                 .parallel()
@@ -201,14 +209,14 @@ class StreamXTest {
 
     @Test
     void testFlatMapIterable() {
-        final List<Museum> museumListContainingNulls = TestSampleGenerator.getMuseumListContainingNulls();
+        final var museumListContainingNulls = TestSampleGenerator.getMuseumListContainingNulls();
 
-        final List<Painting> expected = museumListContainingNulls.stream()
+        final var expected = museumListContainingNulls.stream()
                 .map(Museum::getPaintings)
                 .flatMap(Collection::stream)
                 .collect(toUnmodifiableList());
 
-        final List<Painting> paintings = StreamX.of(museumListContainingNulls)
+        final var paintings = StreamX.of(museumListContainingNulls)
                 .flatMapIterable(Museum::getPaintings)
                 .toList();
 
