@@ -3,7 +3,6 @@ package org.hzt.utils.strings;
 import org.hzt.utils.It;
 import org.hzt.utils.collections.ListX;
 import org.hzt.utils.sequences.Sequence;
-import org.hzt.utils.tuples.Pair;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -12,8 +11,6 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -61,7 +58,7 @@ class StringXTest {
 
     @Test
     void testStringXToListXThenFirstAndLast() {
-        final ListX<Character> characters = StringX.of("Hello").toListX();
+        final var characters = StringX.of("Hello").toListX();
 
         assertAll(
                 () -> assertEquals('H', characters.first()),
@@ -71,23 +68,24 @@ class StringXTest {
 
     @Test
     void testStringXOfCharIterable() {
-        final List<Character> characters = Arrays.asList('H', 'e', 'y', '!', '1', '2', '3');
+        final var characters = List.of('H', 'e', 'y', '!', '1', '2', '3');
 
         assertEquals("Hey!123", StringX.of(characters).toString());
     }
 
     @Test
     void testStringChainingX() {
-        final List<Character> characters = Arrays.asList('H', 'e', 'y', '!', '1', '2', '3');
+        final var characters = List.of('H', 'e', 'y', '!', '1', '2', '3');
 
-        final Pair<Long, String> actual = StringX.of(characters)
-                .concat("Hallo")
+        final var actual = StringX.of(characters)
+                .concat("\nHallo")
                 .replaceFirst("lo", "asd")
+                .lines()
                 .toTwo(Sequence::count, s -> s.joinToString(""));
 
         assertAll(
                 () -> assertEquals("Hey!123Halasd", actual.second()),
-                () -> assertEquals(13, actual.first()));
+                () -> assertEquals(2, actual.first()));
     }
 
     @Test
@@ -96,12 +94,17 @@ class StringXTest {
     }
 
     @Test
+    void testIfBlank() {
+        assertEquals("Test", StringX.of("  ").ifBlank(() -> "Test").toString());
+    }
+
+    @Test
     void flatMapToCharArrayAndFromCharArrayToStringX() {
-        final char[] characters = Sequence.of("hallo", "Wat is dat?", "Een test")
+        final var characters = Sequence.of("hallo", "Wat is dat?", "Een test")
                 .joinToStringX("")
                 .toCharArray();
 
-        final StringX stringX = StringX.of(characters);
+        final var stringX = StringX.of(characters);
 
         assertEquals("halloWat is dat?Een test", stringX.toString());
     }
@@ -148,7 +151,7 @@ class StringXTest {
     }
 
     private static Map<Character, List<Character>> groupByChars(String s1) {
-        return StringX.of(s1).chars()
+        return s1.chars()
                 .mapToObj(i -> (char) i)
                 .collect(Collectors.groupingBy(Function.identity()));
     }
@@ -172,8 +175,8 @@ class StringXTest {
         @Test
         void testSplitToSequence() {
             String string = "hallo, this, is, a, test -> answer";
-            final StringX comma = StringX.of(", ");
-            final Sequence<String> strings = StringX.of(string).splitToSequence(comma, " -> ");
+            final var comma = StringX.of(", ");
+            final var strings = StringX.of(string).splitToSequence(comma, " -> ");
 
             strings.forEach(System.out::println);
 
@@ -183,8 +186,8 @@ class StringXTest {
         @Test
         void testSplitToSequenceIgnoreCase() {
             String string = "hallo O this o is O a, test -> answer";
-            final StringBuilder oDelimiter = new StringBuilder(" o ");
-            final Sequence<String> strings = StringX.of(string).splitToSequence(true, ", ", oDelimiter, " -> ");
+            final var oDelimiter = new StringBuilder(" o ");
+            final var strings = StringX.of(string).splitToSequence(true, ", ", oDelimiter, " -> ");
 
             strings.forEach(System.out::println);
 
@@ -193,21 +196,21 @@ class StringXTest {
 
         @Test
         void testStringTokenizerVsSplitToSequence() {
-            final String testString = "This is a\ftest\tcontaining\ndefault\rseparators";
+            final var testString = "This is a\ftest\tcontaining\ndefault\rseparators";
 
-            final StringTokenizer tokenizer = new StringTokenizer(testString);
+            final var tokenizer = new StringTokenizer(testString);
             final List<String> tokens = new ArrayList<>();
             while (tokenizer.hasMoreTokens()) {
                 tokens.add(tokenizer.nextToken());
             }
 
-            final ListX<String> strings = Sequence.of(Collections.list(new StringTokenizer(testString)))
+            final var strings = Sequence.of(() -> new StringTokenizer(testString).asIterator())
                     .map(Object::toString)
                     .toListX();
 
-            final ListX<String> split = StringX.of(testString).split(" ", "\t", "\n", "\r", "\f");
+            final var split = StringX.of(testString).split(" ", "\t", "\n", "\r", "\f");
 
-            final ListX<String> expected = ListX.of("This", "is", "a", "test", "containing", "default", "separators");
+            final var expected = ListX.of("This", "is", "a", "test", "containing", "default", "separators");
 
             assertAll(
                     () -> assertEquals(expected, split),
@@ -218,38 +221,38 @@ class StringXTest {
 
         @Test
         void testSplitWithoutDelimitersDoesNotSplitInputString() {
-            final String testString = "This is a\ftest\tcontaining\ndefault\rseparators";
+            final var testString = "This is a\ftest\tcontaining\ndefault\rseparators";
 
-            final ListX<String> split = StringX.of(testString).split();
+            final var split = StringX.of(testString).split();
 
-            final ListX<String> expected = ListX.of(testString);
+            final var expected = ListX.of(testString);
 
             assertEquals(expected, split);
         }
 
         @Test
         void testSplitToSequenceByEmptyStringYieldsSeparateCharacters() {
-            final String testString = "Test";
+            final var testString = "Test";
 
-            final Sequence<String> split = StringX.of(testString).splitToSequence("");
+            final var split = StringX.of(testString).splitToSequence("");
 
-            final Sequence<String> expected = Sequence.of("", "T", "e", "s", "t", "");
+            final var expected = Sequence.of("", "T", "e", "s", "t", "");
 
             assertIterableEquals(expected, split);
         }
 
         @Test
         void testSplitByEmptyStringYieldsSeparateCharacters() {
-            final String testString = "Test";
+            final var testString = "Test";
 
-            final ListX<String> split1 = StringX.of(testString).split("");
+            final var split1 = StringX.of(testString).split("");
 
-            final List<String> split2 = Pattern.compile("").splitAsStream(testString)
+            final var split2 = Pattern.compile("").splitAsStream(testString)
                     .collect(Collectors.toList());
             split2.add(0, "");
             split2.add("");
 
-            final ListX<String> expected = ListX.of("", "T", "e", "s", "t", "");
+            final var expected = ListX.of("", "T", "e", "s", "t", "");
 
             assertAll(
                     () -> assertEquals(expected, split1),
