@@ -13,12 +13,10 @@ import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.Year;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -38,7 +36,7 @@ public final class TestSampleGenerator {
     private static final Random RANDOM = new Random();
     private static final String FICTION = "Fiction";
 
-    private static final List<Function<Integer, Number>> TO_NUMBER_TYPE_FUNCTIONS = Arrays.asList(
+    private static final List<Function<Integer, Number>> TO_NUMBER_TYPE_FUNCTIONS = List.of(
             Integer::byteValue,
             Integer::shortValue,
             Integer::valueOf,
@@ -57,7 +55,7 @@ public final class TestSampleGenerator {
     }
 
     public static List<Book> createBookList() {
-        return Arrays.asList(new Book("Harry Potter", FICTION),
+        return List.of(new Book("Harry Potter", FICTION),
                 new Book("Lord of the Rings", FICTION),
                 new Book("Pragmatic Programmer", "Programming"),
                 new Book("OCP 11 Volume 1", "Programming"),
@@ -87,7 +85,7 @@ public final class TestSampleGenerator {
         vermeer.addPaintings(meisje_met_de_parel, meisje_met_de_rode_hoed, het_melkmeisje);
         vanGogh.addPaintings(lenteTuin, de_sterrennacht);
 
-        return Arrays.asList(guernica, lesDemoiselles, le_reve, meisje_met_de_parel, het_melkmeisje,
+        return List.of(guernica, lesDemoiselles, le_reve, meisje_met_de_parel, het_melkmeisje,
                 meisje_met_de_rode_hoed, lenteTuin, de_sterrennacht
         );
     }
@@ -96,28 +94,28 @@ public final class TestSampleGenerator {
         if (museums == null) {
             museums = createMuseumList();
         }
-        return museums;
+        return List.copyOf(museums);
     }
 
     public static List<Museum> createMuseumList() {
 
-        final Map<String, List<Painting>> groupedByLastName = createPaintingList().stream()
+        final var groupedByLastName = createPaintingList().stream()
                 .collect(Collectors.groupingBy(painting -> painting.painter().getLastname()));
 
         final List<Painting> vanGoghPaintings = groupedByLastName.get("van Gogh");
         final List<Painting> vermeerPaintings = groupedByLastName.get("Vermeer");
         final List<Painting> picassoPaintings = groupedByLastName.get("Picasso");
 
-        final Painter painter = new Painter("Hans", "Zuidervaart", LocalDate.of(1989, 10 ,18));
-        return Arrays.asList(
-                new Museum(null, null, Collections.singletonList(new Painting("Test", painter, Year.of(1997), false))),
+        final var painter = new Painter("Hans", "Zuidervaart", LocalDate.of(1989, 10 ,18));
+        return List.of(
+                new Museum(null, null, List.of(new Painting("Test", painter, Year.of(1997), false))),
                 new Museum("Van Gogh Museum", LocalDate.of(1992, Month.APRIL, 2), vanGoghPaintings),
                 new Museum("Vermeer Museum", LocalDate.of(1940, Month.JANUARY, 23), vermeerPaintings),
                 new Museum("Picasso Museum", LocalDate.of(1965, Month.AUGUST, 4), picassoPaintings));
     }
 
     public static List<BankAccount> createSampleBankAccountList() {
-        return Arrays.asList(
+        return List.of(
                 new BankAccount("NL43INGB0008541648", new Customer("1", "Zuidervaart"), BigDecimal.valueOf(-4323)),
                 new BankAccount("BL54ABNA0004536472", new Customer("2", "Jansen"), BigDecimal.valueOf(234235.34)),
                 new BankAccount("NL32BUNQ0004358592", new Customer("3", "Vullings"), BigDecimal.valueOf(2342)),
@@ -162,19 +160,19 @@ public final class TestSampleGenerator {
     public static Map<String, Museum> createMuseumMap() {
         return createMuseumList().stream()
                 .filter(e -> e.getName() != null)
-                .collect(Collectors.toMap(Museum::getName, Function.identity()));
+                .collect(Collectors.toUnmodifiableMap(Museum::getName, Function.identity()));
     }
 
     public static List<String> getEnglishNameList() {
-        final String name = "/english_names.txt";
-        final Path path = Optional.ofNullable(TestSampleGenerator.class.getResource(name))
+        final var name = "/english_names.txt";
+        final var path = Optional.ofNullable(TestSampleGenerator.class.getResource(name))
                 .map(URL::getFile)
                 .map(File::new)
                 .map(File::toPath)
                 .orElseThrow(() -> new NoSuchElementException("Could not find resource " + name));
 
         try (Stream<String> s = Files.lines(path)) {
-            return s.collect(Collectors.toList());
+            return s.collect(Collectors.toUnmodifiableList());
         } catch (IOException e) {
             throw new IllegalStateException(e);
         }
